--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     header {
       background: #111;
       color: #fff;
-      padding: 2.5rem 1.5rem 1.5rem 1.5rem;
+      padding: 0.7rem 1.5rem 0.6rem 1.5rem; /* much less vertical padding */
       text-align: center;
     }
     h1 {
-      font-size: 2.6rem;
-      margin-bottom: 0.4rem;
+      font-size: 2.1rem;
+      margin-bottom: 0.2rem;
       letter-spacing: 2px;
     }
     nav {
-      margin-top: 1.3rem;
-      margin-bottom: 1.3rem;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
     }
     nav a {
       color: #fff;
@@ -109,7 +109,7 @@
     @media (max-width: 700px) {
       .info-grid { flex-direction: column; gap: 0.7rem; }
       main { padding: 0 0.3rem; }
-      header { padding: 1.1rem 0.3rem 0.7rem 0.3rem; }
+      header { padding: 0.5rem 0.3rem 0.2rem 0.3rem; }
       h1 { font-size: 1.6rem; }
       h2 { font-size: 1.15rem; }
     }
