--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <strong>Status:</strong> Single<br>
         </div>
         <div class="info-col">
-          <strong>Email:</strong> <a href="mailto:aitopuz@zohomail.eu">aitopuz@zohomail.eu</a><br>
+          <strong>Email:</strong> <a href="mailto:aitopuz@zohomail.eu">aitopuz@zohomail.eu</a>,<a href="mailto:aitopuz@zohomail.eu">aitopuz82@protonmail.com</a><br>
           <strong>ORCID:</strong> <a href="https://orcid.org/0000-0002-1397-8839" target="_blank">0000-0002-1397-8839</a><br>
           <strong>GitHub:</strong> <a href="https://github.com/illcore" target="_blank">illcore</a>
         </div>
