--- a/index.html
+++ b/index.html
@@ -299,6 +299,11 @@
       <h2>Selected Pre-prints</h2>
       <ol>
         <li>
+          <span class="paper-title">A linear/Gaussian approximation of millimetric spatial uncertainties in particle detectors: A showcase about muon tomography based on GEANT4 simulations/span>,
+          arXiv:2406.15462, 2024,
+          <a href="https://doi.org/10.5281/zenodo.15574964" target="_blank">doi:10.5281/zenodo.15574964</a>
+        </li>
+        <li>
           <span class="paper-title">Thermal/epithermal neutron detection via LiO<sub>2</sub>-doped fiber bundles: A computational study through GEANT4 simulations</span>,
           arXiv:2406.15462, 2024,
           <a href="https://arxiv.org/abs/2406.15462" target="_blank">arXiv:2406.15462</a>
