--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       <ol>
         <li>
           <span class="paper-title">A linear/Gaussian approximation of millimetric spatial uncertainties in particle detectors: A showcase about muon tomography based on GEANT4 simulations/span>,
-          arXiv:2406.15462, 2024,
+          Zenodo, 2025,
           <a href="https://doi.org/10.5281/zenodo.15574964" target="_blank">doi:10.5281/zenodo.15574964</a>
         </li>
         <li>
