--- a/index.html
+++ b/index.html
@@ -299,7 +299,12 @@
       <h2>Selected Pre-prints</h2>
       <ol>
         <li>
-          <span class="paper-title">A linear/Gaussian approximation of millimetric spatial uncertainties in particle detectors: A showcase about muon tomography based on GEANT4 simulations/span>,
+          <span class="paper-title">Linear/Gaussian approximation of millimetric spatial uncertainties in particle detectors: A showcase about muon tomography based on GEANT4 simulations/span>,
+          Zenodo, 2025,
+          <a href="https://doi.org/10.5281/zenodo.15574964" target="_blank">doi:10.5281/zenodo.15574964</a>
+        </li>
+        <li>
+          <span class="paper-title">Linear/Gaussian approximation of millimetric spatial uncertainties in particle detectors: A showcase about muon tomography based on GEANT4 simulations/span>,
           Zenodo, 2025,
           <a href="https://doi.org/10.5281/zenodo.15574964" target="_blank">doi:10.5281/zenodo.15574964</a>
         </li>
