--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       <ol>
         <li>
           <span class="paper-title">Estimation of energy deposition via detector sections in muon scattering tomography: Attestation based on GEANT4 simulations</span>,
-          Ouverte HAL, 2025,
+          Archive ouverte HAL, 2025,
           <a href="https://hal.science/hal-05083316v1" target="_blank">hal-05083316</a>
         </li>
         <li>
