--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <section id="summary">
       <h2>Summary</h2>
       <ul>
-        <li>Radiation physics: Particle transport, source definition/setup, particle detectors, muon tomography, space applications, and shielding/dosimetry</li>
+        <li>Radiation physics: Particle transport, source definition/setup, particle detectors, muon tomography, space applications, neutrino experiments, and shielding/dosimetry</li>
         <li>Computational methods: Monte Carlo simulations, probabilistic approaches, and statistical/deterministic numerical methods</li>
       </ul>
     </section>
@@ -160,6 +160,7 @@
     <section id="professional">
       <h2>Professional Experience</h2>
       <ul>
+        <li><strong>08/2025 - Present:</strong> Postdoctoral fellow - ENRG/Erciyes University, Turkey</li>
         <li><strong>02/2024 - 02/2025:</strong> Postdoctoral fellow - MAHE/MCNS, India</li>
         <li><strong>10/2022 - 08/2023:</strong> Junior research fellow in physics - University of Tartu, Estonia</li>
         <li><strong>11/2021 - 04/2022:</strong> Researcher - SilentBorder/University of Tartu, Estonia</li>
