--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
     <section id="summary">
       <h2>Summary</h2>
       <ul>
-        <li>Radiation physics: Particle transport, source definition/setup, particle detectors, muon tomography, space applications, neutrino experiments, and shielding/dosimetry</li>
-        <li>Computational methods: Monte Carlo simulations, probabilistic approaches, and statistical/deterministic numerical methods</li>
+        <li>Radiation physics: Particle transport, source definition/setup, particle detectors, muon tomography, space applications, neutrino experiments, and shielding/dosimetry;</li>
+        <li>Computational methods: Monte Carlo simulations, probabilistic approaches, and statistical/deterministic numerical methods.</li>
       </ul>
     </section>
 
@@ -196,6 +196,14 @@
     <section id="publications">
       <h2>Journal Papers</h2>
       <ol>
+       </li>
+        <span class="paper-title">Estimation of energy deposition via detector sections in muon scattering tomography: Attestation based on GEANT4 simulations</span>,
+         London Journal of Physics, Accepted, 2025,
+       <li>
+          <span class="paper-title">Implementation of atmospheric proton spectrum in GEANT4 simulations for space applications</span>,
+          Communication in Physics, 2024,
+          <a href="https://doi.org/10.15625/0868-3166/21860" target="_blank">doi:10.15625/0868-3166/21860</a>
+        </li>
         <li>
           <span class="paper-title">Implementation of atmospheric proton spectrum in GEANT4 simulations for space applications</span>,
           Communication in Physics, 2024,
@@ -299,11 +307,6 @@
     <section id="preprints">
       <h2>Selected Pre-prints</h2>
       <ol>
-        <li>
-          <span class="paper-title">Estimation of energy deposition via detector sections in muon scattering tomography: Attestation based on GEANT4 simulations</span>,
-          Archive ouverte HAL, 2025,
-          <a href="https://hal.science/hal-05083316v1" target="_blank">hal-05083316</a>
-        </li>
         <li>
           <span class="paper-title">Linear/Gaussian approximation of millimetric spatial uncertainties in particle detectors: A showcase about muon tomography based on GEANT4 simulations</span>,
           Zenodo, 2025,
