--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
     <section id="preprints">
       <h2>Selected Pre-prints</h2>
       <ol>
+        <li><span class="paper-title"> Charged particle discrimination via time-of-flight capabilities (ToF) of plastic scintillators: A paragon over µ+ - proton separation through GEANT4 simulations, in Preparation, 2025</li>
         <li>
           <span class="paper-title">Linear/Gaussian approximation of millimetric spatial uncertainties in particle detectors: A showcase about muon tomography based on GEANT4 simulations</span>,
           Zenodo, 2025,
