--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
   <header>
     <h1>Ahmet Ilker Topuz</h1>
     <nav>
-      <a href="#info">Info</a>
+     <a href="#info">Personal Information</a>
       <a href="#summary">Summary</a>
-      <a href="#professional">Professional</a>
+      <a href="#professional">Professional Experience</a>
       <a href="#education">Education</a>
       <a href="#publications">Publications</a>
       <a href="#proceedings">Proceedings</a>
@@ -198,7 +198,7 @@
       <ol>
        <li>
         <span class="paper-title">Estimation of energy deposition via detector sections in muon scattering tomography: Attestation based on GEANT4 simulations</span>,
-         London Journal of Physics, Accepted, 2025,
+         London Journal of Physics, Accepted, 2025.
        </li>  
        <li>
           <span class="paper-title">Implementation of atmospheric proton spectrum in GEANT4 simulations for space applications</span>,
