--- a/index.html
+++ b/index.html
@@ -361,5 +361,8 @@
       </div>
     </section>
   </main>
+<footer>
+    <p>&copy; 2024 - 2025 Ahmet Ilker Topuz. All rights reserved.</p>
+</footer>  
 </body>
 </html>
