--- a/index.html
+++ b/index.html
@@ -102,6 +102,21 @@
       display: inline-block;
       margin-right: 1.2em;
     }
+     /* Footer Banner Styles */
+    footer {
+      background: #111;
+      color: #fff;
+      padding: 2rem 0;
+      text-align: center;
+      margin-top: auto;
+    }
+    
+    footer p {
+      margin: 0;
+      font-size: 0.95rem;
+      letter-spacing: 0.5px;
+    }
+    
     @media (max-width: 900px) {
       main { padding: 0 0.8rem; }
       .info-grid { gap: 1.2rem; }
