--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
       <h2>Selected Pre-prints</h2>
       <ol>
         <li>
-        <span class="paper-title"> Charged particle discrimination via time-of-flight capabilities (ToF) of plastic scintillators: A paragon over µ+ - proton separation through GEANT4 simulations, Zenodo, 2025
+        <span class="paper-title"> Charged particle discrimination via time-of-flight capabilities (ToF) of plastic scintillators: A paragon over µ+ - proton separation through GEANT4 simulations, Zenodo, 2025,
         <a href="https://doi.org/10.5281/zenodo.16742960" target="_blank">10.5281/zenodo.16742960</a>
         </li>
         <li>
