--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       <ol>
         <li>
         <span class="paper-title"> Charged particle discrimination via time-of-flight capabilities (ToF) of plastic scintillators: A paragon over µ+ - proton separation through GEANT4 simulations, Zenodo, 2025,
-        <a href="https://doi.org/10.5281/zenodo.16742960" target="_blank">10.5281/zenodo.16742960</a>
+        <a href="https://doi.org/10.5281/zenodo.16742960" target="_blank">doi:10.5281/zenodo.16742960</a>
         </li>
         <li>
           <span class="paper-title">Linear/Gaussian approximation of millimetric spatial uncertainties in particle detectors: A showcase about muon tomography based on GEANT4 simulations</span>,
