--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
       <ol>
        <li>
         <span class="paper-title">Estimation of energy deposition via detector sections in muon scattering tomography: Attestation based on GEANT4 simulations</span>,
-         London Journal of Physics, Accepted, 2025.
+         London Journal of Physics,2025 
+          <a href="https://doi.org/10.15625/0868-3166/21860" target="_blank">doi:10.15625/0868-3166/21860</a>
        </li>  
         <li>
           <span class="paper-title">Implementation of atmospheric proton spectrum in GEANT4 simulations for space applications</span>,
