--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
        <li>
         <span class="paper-title">Estimation of energy deposition via detector sections in muon scattering tomography: Attestation based on GEANT4 simulations</span>,
          London Journal of Physics,2025 
-          <a href="https://doi.org/10.15625/0868-3166/21860" target="_blank">doi:10.15625/0868-3166/21860</a>
-       </li>  
+          <a href="https://doi.org/10.69710/ljp.v2i1.14781" target="_blank">doi:10.69710/ljp.v2i1.14781</a>
+       </li>
         <li>
           <span class="paper-title">Implementation of atmospheric proton spectrum in GEANT4 simulations for space applications</span>,
           Communication in Physics, 2024,
