--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       <ol>
        <li>
         <span class="paper-title">Estimation of energy deposition via detector sections in muon scattering tomography: Attestation based on GEANT4 simulations</span>,
-         London Journal of Physics,2025 
+         London Journal of Physics, 2025,  
           <a href="https://doi.org/10.69710/ljp.v2i1.14781" target="_blank">doi:10.69710/ljp.v2i1.14781</a>
        </li>
         <li>
